tests/sksl/errors/VertexEarlyReturn.glsl
### Compilation failed:

error: 5: early returns from vertex programs are not supported
1 error
